# G4DCM

./: CMakeLists.txt  DICOM.cc  README.md  run.mac  vis.mac
include/: ActionInitialization.hh  DicomDetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  ProtonPlan.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DicomDetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  ProtonPlan.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
